Refactored part editors frames
